# idris-erlang

./: .gitignore  LICENSE  Makefile  README.org  assert.hs  example.erl  idris-cerl.cabal  idris-erlang.cabal  rebar.config  scratch.hs  shell.nix  stack.yaml
examples/simple/: Main.idr  error
irts/: idris_erlang_conc.erl  idris_erlang_rts.erl
lib/erlang/: Makefile
lib/erlang/src/: idris_cerl.app.src  idris_cerl_conc.erl  idris_cerl_rts.erl
lib/idris/: Makefile  cerl.ipkg
lib/idris/src/: CoreErlang.idr
libs/erlang/: ErlPrelude.idr  Makefile  erlang.ipkg
libs/erlang/src/Erlang/: Process.idr
src/: Main.hs
src/IRTS/: CodegenCoreErlang.hs  CodegenErlang.hs
src/IRTS/CodegenCoreErlang/: Foreign.hs
