-- TODO: add idris --install <pkg> to install steps

name:                idris-cerl
version:             0.0.0.1
synopsis:            Core Erlang Backend for the Idris Compiler
license:             BSD3
license-file:        LICENSE
author:              Archibald Samuel Elliott
maintainer:          Eric Bailey <eric@ericb.me>
category:            Compilers/Interpreters, Dependent Types
build-type:          Simple
cabal-version:       >=1.8

data-files:          lib/erlang/src/*.erl
                   , lib/erlang/ebin/*.beam

executable idris-codegen-cerl
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       IRTS.CodegenCoreErlang
                     , IRTS.CodegenCoreErlang.Foreign

  extensions:          PatternSynonyms
                     , ViewPatterns
                     , OverloadedStrings

  build-depends:       base >=4 && <5
                     , containers
                     , idris >= 0.12 && <1
                     , mtl
                     , transformers
                     , directory
                     , filepath
                     , CoreErlang

  if os(linux)
     cpp-options:   -DLINUX
     build-depends: unix < 2.8
  if os(freebsd)
     cpp-options:   -DFREEBSD
     build-depends: unix < 2.8
  if os(dragonfly)
     cpp-options:   -DDRAGONFLY
     build-depends: unix < 2.8
  if os(darwin)
     cpp-options:   -DMACOSX
     build-depends: unix < 2.8
  if os(windows)
     cpp-options:   -DWINDOWS
     build-depends: Win32 < 2.4

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields
